--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
@@ -18,6 +19,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "prisma": "^6.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
