--- a/api/.env
+++ b/api/.env
@@ -8,4 +8,4 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
-DATABASE_URL="postgresql://postgres:0214@localhost:5432/movies?schema=public"
+DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydb?schema=public"
