--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "db": "ts-node-dev --respawn --transpile-only src/db.ts", 
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,7 +24,6 @@
     "prisma": "^6.14.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
-  },
-    "type": "module"
+  }
 }
 
